syntax = "proto3";

package charonrpc;

option go_package = "github.com/piotrkowalczuk/charon/charonrpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service OAuth2 {
    rpc Authorization(AuthorizationRequest) returns (google.protobuf.StringValue);
}

message AuthorizationRequest {
    string refresh_token = 1;
}

message OAuth2Token {
    string refresh_token = 1;
    string access_token = 2;
    string token_type = 3;
    google.protobuf.Timestamp expiry = 4;
}
